force-app/main/default/objects/Postal_Code_Mapping__c/Postal_Code_Mapping__c.object-meta.xml
<CustomObject>
    <label>Postal Code Mapping</label>
    <nameField>
        <label>Postal Code Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Postal Code Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>