force-app/main/default/objects/Postal_Code_Mapping__c/fields/Acute_Mortara_Territory__c.field-meta.xml
<CustomField>
    <fullName>Acute_Mortara_Territory__c</fullName>
    <label>Acute Mortara Territory</label>
    <length>255</length>
    <type>Text</type>
</CustomField>