force-app/main/default/objects/Postal_Code_Mapping__c/fields/Acute_Region__c.field-meta.xml
<CustomField>
    <fullName>Acute_Region__c</fullName>
    <label>Acute Region</label>
    <length>200</length>
    <type>Text</type>
</CustomField>