force-app/main/default/objects/Postal_Code_Mapping__c/fields/Acute_Territory__c.field-meta.xml
<CustomField>
    <fullName>Acute_Territory__c</fullName>
    <label>Acute Territory</label>
    <length>200</length>
    <type>Text</type>
</CustomField>