force-app/main/default/objects/Postal_Code_Mapping__c/fields/Ambulatory_Region__c.field-meta.xml
<CustomField>
    <fullName>Ambulatory_Region__c</fullName>
    <label>Ambulatory Region</label>
    <length>200</length>
    <type>Text</type>
</CustomField>