force-app/main/default/objects/Postal_Code_Mapping__c/fields/Ambulatory_Territory__c.field-meta.xml
<CustomField>
    <fullName>Ambulatory_Territory__c</fullName>
    <label>Ambulatory Territory</label>
    <length>200</length>
    <type>Text</type>
</CustomField>