force-app/main/default/objects/Postal_Code_Mapping__c/fields/GSS_Region__c.field-meta.xml
<CustomField>
    <fullName>GSS_Region__c</fullName>
    <label>GSS Region</label>
    <length>200</length>
    <type>Text</type>
</CustomField>