force-app/main/default/objects/Postal_Code_Mapping__c/fields/GSS_Territory__c.field-meta.xml
<CustomField>
    <fullName>GSS_Territory__c</fullName>
    <label>GSS Territory</label>
    <length>200</length>
    <type>Text</type>
</CustomField>