force-app/main/default/objects/Postal_Code_Mapping__c/fields/Inside_Sales__c.field-meta.xml
<CustomField>
    <fullName>Inside_Sales__c</fullName>
    <label>Inside Sales</label>
    <length>200</length>
    <type>Text</type>
</CustomField>