force-app/main/default/objects/Postal_Code_Mapping__c/fields/Postal_Code_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code_Country_Code__c</fullName>
    <label>Postal Code Country Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>