force-app/main/default/objects/Postal_Code_Mapping__c/fields/Solutions_Architect__c.field-meta.xml
<CustomField>
    <fullName>Solutions_Architect__c</fullName>
    <label>Solutions Architect</label>
    <length>200</length>
    <type>Text</type>
</CustomField>