force-app/main/default/objects/Postal_Code_Mapping__c/fields/Specialty_Territory__c.field-meta.xml
<CustomField>
    <fullName>Specialty_Territory__c</fullName>
    <description>Formerly &quot;Specialty Territory&quot;</description>
    <label>Strategic Territory</label>
    <length>200</length>
    <type>Text</type>
</CustomField>