force-app/main/default/objects/Postal_Code_Mapping__c/fields/Vision_Care_Region__c.field-meta.xml
<CustomField>
    <fullName>Vision_Care_Region__c</fullName>
    <label>Vision Care Region</label>
    <length>200</length>
    <type>Text</type>
</CustomField>